rewrite app.json

--- a/app.json
+++ b/app.json
@@ -10,7 +10,10 @@
     "RACK_ENV": {
       "required": true
     },
-    "RAILS_ENV": "hogehoge",
+    "RAILS_ENV": {
+      "staging",
+      "required": true
+    },
     "RAILS_LOG_TO_STDOUT": {
       "required": true
     },
