--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
       "required": true
     },
     "RAILS_ENV": {
-      "staging",
+      "required": true
     },
     "RAILS_LOG_TO_STDOUT": {
       "required": true
