--- a/config/database.yml
+++ b/config/database.yml
@@ -83,3 +83,9 @@ production:
   database: devise_test_production
   username: devise_test
   password: <%= ENV['DEVISE_TEST_DATABASE_PASSWORD'] %>
+
+staging:
+  <<: *default
+  database: devise_test_production
+  username: devise_test
+  password: <%= ENV['DEVISE_TEST_DATABASE_PASSWORD'] %>
