--- a/app.json
+++ b/app.json
@@ -1,8 +1,7 @@
 {
   "name": "sample_app",
   "scripts": {
-    "postdeploy": "bundle exec rails db:migrate"
-    "postdeploy": 'HOST="$HEROKU_APP_NAME.herokuapp.com"'
+    "postdeploy": "bundle exec rails db:migrate",
   },
   "env": {
     "HEROKU_APP_NAME": {
@@ -10,7 +9,7 @@
     },
     "HEROKU_PARENT_APP_NAME": {
       "required": true
-    }
+    },
     "LANG": {
       "required": true
     },
